new version 1.8.4 rediff'd customization patch

--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  lightdm-gtk-greeter-1.6.0.tar.gz: 372e3a041ace725aec0ecb92f83098f1b1e5b64b
+  "lightdm-gtk-greeter-1.8.4.tar.gz": fc4eb6cc26898837532b845d77a5a7bebfd961b3
