--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,4 @@
+removed_sources:
+  lightdm-gtk-greeter-1.8.5.tar.gz: 96ede652591a650e159ef5ae4c9b577e38b91ee4
 sources:
-  "lightdm-gtk-greeter-1.8.5.tar.gz": 96ede652591a650e159ef5ae4c9b577e38b91ee4
+  lightdm-gtk-greeter-2.0.1.tar.gz: 36193e8d5803331419e00d7a81c9239a84219859
