--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,3 @@
 sources:
   lightdm-gtk-greeter-2.0.2.tar.gz: 9d04c73dd583cf738767a71f6c05642142e3602c
+  lightdm-gtk-greeter-2.0.6.tar.gz: b37054bbac1cce1078da864b9648dd5a7156a598
